--- a/trunk/codigo/SIDAF/SIDAF.BLL/SIDAF.BLL.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.BLL/SIDAF.BLL.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enum\BuscaPessoa.cs" />
     <Compile Include="PessoaBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -57,6 +58,9 @@
       <Project>{3B2B981D-AA7C-4921-8566-98513F1FD547}</Project>
       <Name>SIDAF.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="DiagramaClasses.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
