--- a/trunk/codigo/SIDAF/SIDAF.DAL/SIDAF.DAL.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.DAL/SIDAF.DAL.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Banco.cs" />
+    <Compile Include="ClienteDAO.cs" />
     <Compile Include="PessoaDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
