--- a/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
+++ b/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
@@ -45,7 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cliente.cs" />
     <Compile Include="Empresa.cs" />
+    <Compile Include="Filial.cs" />
+    <Compile Include="Funcionario.cs" />
+    <Compile Include="Interface\IFuncionario.cs" />
+    <Compile Include="Interface\ICliente.cs" />
     <Compile Include="Interface\IEmpresa.cs" />
     <Compile Include="Interface\IEndereco.cs" />
     <Compile Include="Interface\ISac.cs" />
@@ -56,6 +61,7 @@
     <Compile Include="Pessoa.cs" />
     <Compile Include="Pessoas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
