--- a/trunk/codigo/SIDAF/SIDAF.BLL/SIDAF.BLL.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.BLL/SIDAF.BLL.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enum\BuscaPessoa.cs" />
+    <Compile Include="Enum\StatusPedido.cs" />
     <Compile Include="PessoaBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
