Alteração da camada alocada o enum StatusPedido.cs de SIDAF.BLL.Enum para SIDAF.Model.Enum

--- a/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
+++ b/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Clientes.cs" />
     <Compile Include="Entrada.cs" />
     <Compile Include="Entradas.cs" />
+    <Compile Include="Enum\StatusPedido.cs" />
     <Compile Include="Especificacoes.cs" />
     <Compile Include="Estorno.cs" />
     <Compile Include="Estornos.cs" />
