--- a/trunk/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Telefones.cs" />
     <Compile Include="TipoProduto.cs" />
+    <Compile Include="TiposProduto.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Usuarios.cs" />
     <Compile Include="Venda.cs" />
