--- a/trunk/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
@@ -46,32 +46,32 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Caixa.cs" />
-    <Compile Include="Caixas.cs" />
+    <Compile Include="List\Caixas.cs" />
     <Compile Include="Cliente.cs" />
-    <Compile Include="Clientes.cs" />
+    <Compile Include="List\Clientes.cs" />
     <Compile Include="Entrada.cs" />
-    <Compile Include="Entradas.cs" />
+    <Compile Include="List\Entradas.cs" />
     <Compile Include="Enum\StatusPedido.cs" />
-    <Compile Include="Especificacoes.cs" />
+    <Compile Include="List\Especificacoes.cs" />
     <Compile Include="Estorno.cs" />
-    <Compile Include="Estornos.cs" />
-    <Compile Include="Filiais.cs" />
+    <Compile Include="List\Estornos.cs" />
+    <Compile Include="List\Filiais.cs" />
     <Compile Include="Interface\ICaixa.cs" />
     <Compile Include="Interface\IEntrada.cs" />
     <Compile Include="Interface\IEstorno.cs" />
     <Compile Include="Interface\ISaida.cs" />
     <Compile Include="Interface\ITipoProduto.cs" />
     <Compile Include="Interface\IVenda.cs" />
-    <Compile Include="ItensEstoque.cs" />
+    <Compile Include="List\ItensEstoque.cs" />
     <Compile Include="Interface\IUsuario.cs" />
     <Compile Include="Pedido.cs" />
     <Compile Include="Empresa.cs" />
-    <Compile Include="Empresas.cs" />
-    <Compile Include="Enderecos.cs" />
+    <Compile Include="List\Empresas.cs" />
+    <Compile Include="List\Enderecos.cs" />
     <Compile Include="Especificacao.cs" />
     <Compile Include="Filial.cs" />
     <Compile Include="Funcionario.cs" />
-    <Compile Include="Funcionarios.cs" />
+    <Compile Include="List\Funcionarios.cs" />
     <Compile Include="Interface\IItemEstoque.cs" />
     <Compile Include="Interface\IEspecificacao.cs" />
     <Compile Include="Interface\IFuncionario.cs" />
@@ -81,26 +81,26 @@
     <Compile Include="Interface\ISac.cs" />
     <Compile Include="Interface\IProduto.cs" />
     <Compile Include="ItemEstoque.cs" />
-    <Compile Include="Pedidos.cs" />
+    <Compile Include="List\Pedidos.cs" />
     <Compile Include="Produto.cs" />
-    <Compile Include="Produtos.cs" />
+    <Compile Include="List\Produtos.cs" />
     <Compile Include="Sac.cs" />
-    <Compile Include="Sacs.cs" />
+    <Compile Include="List\Sacs.cs" />
     <Compile Include="Saida.cs" />
-    <Compile Include="Saidas.cs" />
+    <Compile Include="List\Saidas.cs" />
     <Compile Include="Telefone.cs" />
     <Compile Include="Endereco.cs" />
     <Compile Include="Interface\IPessoa.cs" />
     <Compile Include="Pessoa.cs" />
-    <Compile Include="Pessoas.cs" />
+    <Compile Include="List\Pessoas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Telefones.cs" />
+    <Compile Include="List\Telefones.cs" />
     <Compile Include="TipoProduto.cs" />
-    <Compile Include="TiposProduto.cs" />
+    <Compile Include="List\TiposProduto.cs" />
     <Compile Include="Usuario.cs" />
-    <Compile Include="Usuarios.cs" />
+    <Compile Include="List\Usuarios.cs" />
     <Compile Include="Venda.cs" />
-    <Compile Include="Vendas.cs" />
+    <Compile Include="List\Vendas.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
