--- a/trunk/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.Model/SIDAF.Model.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{3B2B981D-AA7C-4921-8566-98513F1FD547}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -46,8 +46,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Caixa.cs" />
+    <Compile Include="Categoria.cs" />
+    <Compile Include="Interface\IFuncionario.cs" />
+    <Compile Include="Interface\ICategoria.cs" />
     <Compile Include="List\Caixas.cs" />
     <Compile Include="Cliente.cs" />
+    <Compile Include="List\Categorias.cs" />
     <Compile Include="List\Clientes.cs" />
     <Compile Include="Entrada.cs" />
     <Compile Include="List\Entradas.cs" />
@@ -74,7 +78,6 @@
     <Compile Include="List\Funcionarios.cs" />
     <Compile Include="Interface\IItemEstoque.cs" />
     <Compile Include="Interface\IEspecificacao.cs" />
-    <Compile Include="Interface\IFuncionario.cs" />
     <Compile Include="Interface\ICliente.cs" />
     <Compile Include="Interface\IEmpresa.cs" />
     <Compile Include="Interface\IEndereco.cs" />
