--- a/trunk/codigo/SIDAF/SIDAF.UI.MATRIZ/SIDAF.UI.MATRIZ.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.UI.MATRIZ/SIDAF.UI.MATRIZ.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C58784BF-D5C5-4041-B43C-DDE605B0284B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
@@ -63,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
