--- a/trunk/codigo/SIDAF/SIDAF.UI.FILIAL/SIDAF.UI.FILIAL.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.UI.FILIAL/SIDAF.UI.FILIAL.csproj
@@ -94,6 +94,18 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Gerencia\frmAddEspecificacao.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gerencia\frmAddEspecificacao.Designer.cs">
+      <DependentUpon>frmAddEspecificacao.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Gerencia\frmRealizarPedido.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gerencia\frmRealizarPedido.Designer.cs">
+      <DependentUpon>frmRealizarPedido.cs</DependentUpon>
+    </Compile>
     <Compile Include="Gerencia\frmNovoFuncionario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,6 +132,14 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPrincipal.resx">
       <DependentUpon>frmPrincipal.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gerencia\frmAddEspecificacao.resx">
+      <DependentUpon>frmAddEspecificacao.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Gerencia\frmRealizarPedido.resx">
+      <DependentUpon>frmRealizarPedido.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Gerencia\frmNovoFuncionario.resx">
