--- a/trunk/codigo/SIDAF/SIDAF.UI.FILIAL/SIDAF.UI.FILIAL.csproj
+++ b/trunk/codigo/SIDAF/SIDAF.UI.FILIAL/SIDAF.UI.FILIAL.csproj
@@ -161,6 +161,18 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Relatorio\frmExibirRelatorios.resx">
+      <DependentUpon>frmExibirRelatorios.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Relatorio\frmInformacoesCaixa.resx">
+      <DependentUpon>frmInformacoesCaixa.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Relatorio\frmProdutosEmEstoque.resx">
+      <DependentUpon>frmProdutosEmEstoque.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
@@ -174,9 +186,26 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Relatorio\frmExibirRelatorios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Relatorio\frmExibirRelatorios.Designer.cs">
+      <DependentUpon>frmExibirRelatorios.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Relatorio\frmInformacoesCaixa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Relatorio\frmInformacoesCaixa.Designer.cs">
+      <DependentUpon>frmInformacoesCaixa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Relatorio\frmProdutosEmEstoque.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Relatorio\frmProdutosEmEstoque.Designer.cs">
+      <DependentUpon>frmProdutosEmEstoque.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Relatorio\" />
     <Folder Include="Usuario\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
